// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Contain 1`] = `
<View
  style={
    Object {
      "elevation": 4,
      "shadowColor": "#14171A",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "padding": 24,
        }
      }
    >
      <Text>
        A sponsored post is a small advertising insert appearing in users’ timelines.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Card Deck swipe 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "borderRadius": 5,
        "flex": 1,
      },
      Object {
        "overflow": "hidden",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 5,
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "padding": 24,
        }
      }
    >
      <Text>
        A sponsored post is a small advertising insert appearing in users’ timelines.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Card Default 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 5,
        "flex": 1,
      },
      Object {
        "elevation": 4,
        "shadowColor": "#14171A",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 5,
          "flex": 1,
        },
        undefined,
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "padding": 24,
        }
      }
    >
      <Text>
        A sponsored post is a small advertising insert appearing in users’ timelines.
      </Text>
    </View>
  </View>
</View>
`;
